# haskell-streamdeck

./: CHANGELOG.md  flake.nix  hello-streamdeck.cabal  streamdeck.cabal
.github/workflows/: ci.yml
app/: Main.hs
cat/: convert.sh
lib/: Prelude.hs
lib/Data/ByteString/: Extra.hs
lib/Internal/: Prelude.hs
lib/System/Hardware/: StreamDeck.hs  Streamdeck.hs
lib/System/Hardware/Devices/: StreamDeckMk2.hs  StreamDeckPedal.hs  StreamDeckPlus.hs
src/System/Hardware/: Streamdeck.hs
