cabal-version:      3.4
name:               streamdeck
version:            0.2.0.0
license:            Apache-2.0
license-file:       LICENCE
author:             Linus Vettiger
maintainer:         linus4123@gmail.com
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common
    default-language: GHC2021
    ghc-options:
        -Weverything
        -Wno-unsafe
        -Wno-missing-safe-haskell-mode
        -Wno-missing-export-lists
        -Wno-missing-import-lists
        -Wno-missing-kind-signatures
        -Wno-all-missed-specialisations
    default-extensions:
        ApplicativeDo
        Arrows
        BlockArguments
        DataKinds
        DefaultSignatures
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        ExplicitNamespaces
        LambdaCase
        NoFieldSelectors
        NoImplicitPrelude
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        RecordWildCards
        RecursiveDo
        TypeFamilies
        ViewPatterns

library
    import:           common
    exposed-modules:
        System.Hardware.StreamDeck,
        Data.ByteString.Extra,
    other-modules:
        Internal.Prelude,
    build-depends:
        base,
        hidapi,
        bytestring,
        extra,
        generic-lens,
        lens,
        mtl,
        transformers-base,
        unliftio,
    hs-source-dirs:   lib
